# rust-intonation

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml
src/: cli.rs  diamond.rs  interval.rs  lib.rs  main.rs  math.rs  play.rs  ratio.rs
src/lattice/: dimension.rs  dimension_bounds.rs  mod.rs
src/temperaments/: edo.rs  mod.rs
