[package]
name = "rust-intonation"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
num = { version = "0.4.1" }
rodio = { version = "0.17.0" }

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
